# cmake-imgui

./: CMakeLists.txt
backends/: Allegro5Backend.cmake  Backends.cmake
backends/platform/: AndroidPlatform.cmake  GLFWPlatform.cmake  GLUTPlatform.cmake  SDL2Platform.cmake  SDL3Platform.cmake  Win32Platform.cmake  macOSPlatform.cmake
backends/renderer/: D3D10Renderer.cmake  D3D11Renderer.cmake  D3D12Renderer.cmake  D3D9Renderer.cmake  MetalRenderer.cmake  OpenGL2Renderer.cmake  OpenGL3Renderer.cmake  SDL2Renderer.cmake  SDL3Renderer.cmake  VulkanRenderer.cmake  WebGPURenderer.cmake
